--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ jobs:
         - sudo apt update
         - sudo apt install mono-complete
         - ./compile.sh
-    - stage: deploy
+    - stage: bundle
       script:
         - rm -rf released/*
         - ./release.sh
